Added a navigation bar, with navigation tabs.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>Sports Landing Page</title>
 </head>
 <body>
+
+    <nav class="navbar">
+        <div class="container">
+           <h3>EMT Sports</h3>
+           <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Membership</a></li>
+            <li><a href="#">Support Us</a></li>
+            <li><a class="Cart" href="#">Home</a></li>
+           </ul>
+        </div>
+
+    </nav>
     
 </body>
 </html>
