Added the body content. Headings, Paragraph and image.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
         </div>
 
     </nav>
+
+    <section class="main">
+        <div class="main-contianer">
+            <div>
+                <h2>Comfortable Shoes for Every Occasion!</h2>
+                <h1>Explore Our Products</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi voluptates error eum culpa dicta explicabo provident 
+                    impedit excepturi obcaecati dolor ipsam suscipit pariatur nulla cupiditate repellendus magni, 
+                    corporis quaerat commodi!
+                </p>
+
+                <a href="#" class="btn btn-main">Show More</a>
+            </div>
+            <img src="images/shoes.png" alt="">
+        </div>
+    </section>
     
 </body>
 </html>
