Styled the html file to create  a grid layout, so that the headings and paragraph would be on the left and the image on the right.

--- a/index.html
+++ b/index.html
@@ -3,32 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sports Landing Page</title>
+    <title>EMT E-Sports</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <nav class="navbar">
         <div class="container">
-           <h3>EMT Sports</h3>
-           <ul>
+           <h2>EMT SPORTS</h3>
+           <ul class="nav">
             <li><a href="#">Home</a></li>
             <li><a href="#">Products</a></li>
             <li><a href="#">Membership</a></li>
             <li><a href="#">Support Us</a></li>
-            <li><a class="Cart" href="#">Home</a></li>
+            <li><a class="cart" href="#">CART</a></li>
            </ul>
         </div>
 
     </nav>
 
+    <!-- Main Section -->
     <section class="main">
-        <div class="main-contianer">
-            <div>
+        <div class="main-container">
+            <div  >
                 <h2>Comfortable Shoes for Every Occasion!</h2>
                 <h1>Explore Our Products</h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi voluptates error eum culpa dicta explicabo provident 
-                    impedit excepturi obcaecati dolor ipsam suscipit pariatur nulla cupiditate repellendus magni, 
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Animi voluptates error eum culpa dicta explicabo provident 
+                    impedit excepturi obcaecati dolor ipsam suscipit pariatur nulla 
+                    cupiditate repellendus magni, 
                     corporis quaerat commodi!
                 </p>
 
