--- a/index.html
+++ b/index.html
@@ -41,6 +41,23 @@
             <img src="images/shoes.png" alt="">
         </div>
     </section>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2023 EMT E-Sports. All rights reserved.</p>
+            <ul class="socials">
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Instagram</a></li>
+            </ul>
+        </div>
+        <div class="container">
+            <p>Contact us:</p>
+            <p>Email:</p>
+            <p>Phone:</p>
+            <p>Address:</p>
+        </div>
+    </footer>
     
 </body>
 </html>
